[package]
name = "knx_tun"
version = "0.1.0"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-derive = "0.10.0"
cookie-factory = "0.3.2"
mac_address = "1.1.1"
num_enum = "0.5.4"
seq-macro = "0.3.1"
